--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "crypto": "^1.0.1",
     "nodemon": "^2.0.20"
   },
   "dependencies": {
